link first page to main page while tranferring username through local storage

--- a/css/style.css
+++ b/css/style.css
@@ -77,8 +77,7 @@ span.current::after {
 }
 
 /* to-do list
-welcome screen 
-explain the rules
+transfer username from one js file to another
 put the goblin on screen with hp
 rock paper scissors on bottom with pictures and level
 button to upgrade them and increase damage with coins
