--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,6 @@
 header {
   display: flex;
   background-image: linear-gradient(to bottom right, #1f2937, black);
-  border-bottom: 1px solid white;
   height: 5vh;
   font-family: "Press Start 2P", cursive;
   color: #f9faf8;
@@ -34,7 +33,7 @@ main {
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  min-height: 95vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -70,23 +69,71 @@ main {
   justify-content: center;
 }
 
+#rps-icons {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  margin-top: 10vh;
+}
+
+footer {
+  display: flex;
+  gap: 5px;
+  font-family: "Press Start 2P", cursive;
+  color: #f9faf8;
+  align-items: center;
+  background-image: linear-gradient(to top right, #1f2937, black);
+  justify-content: space-around;
+}
+
+#player-hp,
+#player-gold,
+#luck,
+#damage,
+#hp {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+footer h1 {
+  margin-left: 10px;
+}
+
+#progress-bar {
+  display: flex;
+  border: 1px solid white;
+  height: 20px;
+  width: 200px;
+}
+
+.bar {
+  opacity: 0;
+  background-color: yellow;
+  border: 1px solid black;
+  width: 20%;
+}
+
+footer h3 {
+}
 /* to-do list
 rock paper scissors on bottom with pictures and level
 button to upgrade them and increase damage with coins
-your hp bar
-money bar
 make it work for mobile screens
 */
 
 /* 
-Middle 
-Monster Portrait inside a div
-
-
-Rock Paper Scissors
-format: icon with words under it 
 
 Bottom
-HP Bar Money Bar                Shop(popup)
-inside shop, have the three icons and bars next to them showing their current level and a level up button under it that deducts from coin total
+HP Bar Money Bar Progression bar  Shop(popup)
+inside shop, have health potion (full hp recovery) damage potion (everything does one extra damge) luck potion (chance to do double damage)
+
+
+for the actual gameplay,
+goblin scouts with 5 hp 1 gold each then
+goblin commander 10 hp 5 gold
+then goblin royal guard 20 hp 10 gold
+then goblin lord 40hp (ends game)
+
+when you lose you demote back to the previous tier and if you lose to the scouts just revert back to the first scout 
+kill 5 of each to progress until the goblin lord 
 */
