--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 }
 
 #mob-name {
@@ -61,6 +62,20 @@ main {
   width: 100%;
 }
 
+#crit-bubble {
+  position: absolute;
+  background-color: red;
+  border-radius: 15px;
+  padding: 10px;
+  font-family: "Press Start 2P", cursive;
+  margin-top: 23vh;
+  margin-right: 32vw;
+  transition: 1s;
+}
+
+.show-bubble {
+  opacity: 0;
+}
 #mob-portrait {
   width: 30vw;
   height: auto;
@@ -79,7 +94,8 @@ main {
   display: flex;
   width: 100%;
   justify-content: space-around;
-  margin-top: 2vh;
+  margin-top: 70vh;
+  position: absolute;
 }
 
 footer {
